[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/UI/Powerups Tab.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PowerupsTab.gd" type="Script" id=2]
[ext_resource path="res://Art/UI/White Small Panel.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PowerupButton.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "slide_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 325, 67.5 ), Vector2( 298, 67.5 ) ]
}

[node name="PowerupsTab" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 5.00003
margin_top = -22.5
margin_right = 27.0
margin_bottom = 22.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_right = 22.0
margin_bottom = 45.0
texture = ExtResource( 1 )

[node name="BombButton" type="TextureButton" parent="MarginContainer/TextureRect"]
margin_left = 3.08841
margin_top = 3.46967
margin_right = 22.0884
margin_bottom = 21.4697
toggle_mode = true
texture_normal = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HammerButton" type="TextureButton" parent="MarginContainer/TextureRect"]
margin_left = 3.08841
margin_top = 24.1464
margin_right = 22.0884
margin_bottom = 42.1464
toggle_mode = true
texture_normal = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 1 )
[connection signal="toggled" from="MarginContainer/TextureRect/BombButton" to="." method="_on_BombButton_toggled"]
[connection signal="toggled" from="MarginContainer/TextureRect/HammerButton" to="." method="_on_HammerButton_toggled"]
